# pico-template-vscode

./: CMakeLists.txt  README.md
src/: main.c  project_version.h.in
